Refactor action classes